@@ -1,6 +1,7 @@
     - Add an explicit version to Term::Shell::OnScopeLeave.
         - to settle the PAUSE indexer.
     - Convert t/01require.t to Test::More and strict/warnings.
+    - Convert t/02default.t to Test::More and strict/warnings.
 
 0.03  Sun 14 Oct 11:03:52 IST 2012
     - Moved test.pl under examples so it won't interfere with the building
